updates from review

--- a/hawc/apps/assessment/templates/assessment/fragments/assessment_list_public.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/assessment_list_public.html
@@ -19,7 +19,7 @@
     </tbody>
   </table>
 {% else %}
-  {% alert "type=info" %}
+  {% alert type="info" %}
     No assessments found.
   {% endalert %}
 {% endif %}
