--- a/hawc/templates/hawc/_delete_block.html
+++ b/hawc/templates/hawc/_delete_block.html
@@ -1,4 +1,4 @@
-{% alert "classes=my-2" %}
+{% alert classes="my-2" %}
   <h4><i class="fa fa-exclamation-triangle"></i>&nbsp;Delete this {{name}}?</h4>
   <p>{{notes}}</p>
 
