--- a/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
@@ -20,7 +20,7 @@
     </tbody>
   </table>
 {% else %}
-  {% alert "type=info" %}
+  {% alert type="info" %}
     No assessments found.
   {% endalert %}
 {% endif %}
