change from str to bool

--- a/hawc/apps/lit/templates/lit/reference_extract_list.html
+++ b/hawc/apps/lit/templates/lit/reference_extract_list.html
@@ -52,7 +52,7 @@
       </div>
     </form>
   {% else %}
-    {% alert type="success" dismiss="True" %}
+    {% alert type="success" dismiss=True %}
       <b>Nothing to be done!</b><br/>
       <p>No references have been marked for inclusion which aren't studies already.</p>
     {% endalert %}
