restore if statement left out from testing

--- a/hawc/apps/animal/templates/animal/_doseGroupsDiv.html
+++ b/hawc/apps/animal/templates/animal/_doseGroupsDiv.html
@@ -4,7 +4,7 @@
     <a class="btn btn-primary" id="new_dose_column" href="#">Add new representation</a>
     <a class='btn btn-primary' href="{% url 'assessment:dose_units_create' assessment.pk %}" onclick="return window.app.HAWCUtils.newWindowPopupLink(this);" title="Add new dose-units">+</a>
   </span>
-  {% alert classes="pb-0" %}{{dose_groups_errors|safe}}{% endalert %}
+  {% if dose_groups_errors %}{% alert classes="pb-0" %}{{dose_groups_errors|safe}}{% endalert %}{% endif %}
   <table id="dose_table" class="table table-sm table-striped"></table>
   <input id="dose_groups_json" name="dose_groups_json" type="hidden" />
 </div>
