Alert tag rewrite (#1074)
* change tag

* redo templates

* fix existing alert tags

* format html

* use new alert tag

* add parse_tag_args function

* updates from review

* remove type="danger"

* remove accidental addition

* change from str to bool

* add tests

* convert a few more alerts

* restore if statement left out from testing

* simplify

---------

Co-authored-by: Andy Shapiro <shapiro.andy@epa.gov>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/animal/templates/animal/endpoint_form.html
+++ b/hawc/apps/animal/templates/animal/endpoint_form.html
@@ -4,7 +4,9 @@
   {% if animal_group.dosing_regime %}
     {% crispy form %}
   {% else %}
-    {% alert danger %}Cannot create or modify an endpoint. The animal group has no dose regime. Please update the animal group to add a dosing regime before continuing.{% endalert %}
+    {% alert %}
+      Cannot create or modify an endpoint. The animal group has no dose regime. Please update the animal group to add a dosing regime before continuing.
+    {% endalert %}
   {% endif %}
 
   {# extra stuff that JS will move to correct location #}
