--- a/hawc/apps/lit/templates/lit/tags_copy.html
+++ b/hawc/apps/lit/templates/lit/tags_copy.html
@@ -14,16 +14,9 @@
     </fieldset>
 
     <div id="tag-copy-content" class="hidden my-3" >
-      {% alert warning %}
-        <a class="close" href="#" data-dismiss="alert">×</a>
-        <h4>Warning!</h4>
-        <p>Copying tags from another assessment will remove ALL existing tags, and will
-          also remove any tags from existing literature for this assessment, even if the tag-names
-          are identical between an existing tag and a new tag copied from another assessment.<br><br>
-          It is therefore recommended to only complete this procedure if literature have not yet been
-          tagged for the current assessment.</p>
+      {% alert type="warning" %}
+        <h4 class='alert-header'>Warning!</h4>Copying tags from another assessment will remove ALL existing tags, and will also remove any tags from existing literature for this assessment, even if the tag-names are identical between an existing tag and a new tag copied from another assessment.<br><br> It is therefore recommended to only complete this procedure if literature have not yet been tagged for the current assessment.
       {% endalert %}
-
       <b>Tags for selected assessment:</b>
       <div id="tags">
         <p>
