--- a/hawc/apps/mgmt/templates/mgmt/analytics.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics.html
@@ -25,7 +25,7 @@
 
           <p class="mb-3">Assessment analytics give a high level overview about the shape and composition of data within a HAWC assessment. They include generated tables, plots, and summary statistics for counts of data types within an assessment, as well as time series and estimates of total time spent working on an adding and changing content within an assessment.</p>
 
-          {% alert info %}This is a work in progress; we'd appreciate feedback on the current content, as well as recommendations for other approaches; please <a href="{% url 'contact' %}">contact us</a> with any feedback!{% endalert %}
+          {% alert type="info" %}This is a work in progress; we'd appreciate feedback on the current content, as well as recommendations for other approaches; please <a href="{% url 'contact' %}">contact us</a> with any feedback!{% endalert %}
 
           <p><b>Note:&nbsp;</b>These tabs are expensive to calculate and therefore are cached; check back every few hours to see updates.</p>
 
