--- a/hawc/apps/riskofbias/templates/riskofbias/_arob_none_alert.html
+++ b/hawc/apps/riskofbias/templates/riskofbias/_arob_none_alert.html
@@ -1,4 +1,4 @@
-{% alert info %}
+{% alert type="info" %}
   <p><b>No {{assessment.get_rob_name_display|lower}} requirements exist for this assessment.</b></p>
   {% if obj_perms.edit_assessment %}
     <p>As a project manager, you have the following options:</p>
