--- a/hawc/apps/riskofbias/templates/riskofbias/arob_load_approach.html
+++ b/hawc/apps/riskofbias/templates/riskofbias/arob_load_approach.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% crispy form %}
   <div id='extra_content' class="hidden">
-    {% alert warning %}
+    {% alert type="warning" %}
       <h4>Warning!</h4>
       <p>Loading this approach will delete all {{assessment.get_rob_name_display|lower}}
         information currently saved in this assessment. This includes all domains and metrics
