--- a/hawc/apps/study/templates/study/study_form.html
+++ b/hawc/apps/study/templates/study/study_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   {% if manual_entry_warning %}
-    {% alert warning %}
+    {% alert type="warning" %}
       <p>You can continue to manually enter a study if you wish. However, instead of manually
         entering reference information, we recommend importing the reference from PubMed or HERO
         using one of these approaches instead:</p>
