--- a/hawc/apps/lit/templates/lit/reference_confirm_delete.html
+++ b/hawc/apps/lit/templates/lit/reference_confirm_delete.html
@@ -3,10 +3,10 @@
 {% block content %}
   {{ block.super }}
   {% if object.has_study %}
-    <div class="alert alert-danger my-2">
+    {% alert classes="my-2" %}
       <h4><i class="fa fa-exclamation-triangle"></i>&nbsp;Delete this reference?</h4>
       <p>This reference cannot be deleted; it has a data extraction or study evaluation associated with it. Please delete the <a href="{{object.study.get_absolute_url}}">study</a>. This will remove all associated data and this reference.</p>
-    </div>
+    {% endalert %}
   {% else %}
     {% include "hawc/_delete_block.html" with name="reference" notes="This also removes the reference from any searches/imports which may have included the reference." %}
   {% endif %}
