--- a/hawc/apps/lit/templates/lit/reference_user_tags.html
+++ b/hawc/apps/lit/templates/lit/reference_user_tags.html
@@ -10,7 +10,7 @@
       </li>
     {% empty %}
       <li class="list-group-item">
-        {% alert success %}
+        {% alert type="success" %}
           <i class='fa fa-fw fa-check mr-1'></i>&nbsp;No reference user tags found.
         {% endalert %}
       </li>
