--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -8,136 +8,93 @@
   </p>
 
   <div class="d-flex flex-column">
-    <div {% if not assessment.has_lit_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">Literature Review</h6>
-      {% if not assessment.has_lit_data %}
-        {% alert warning %} No data available {% endalert %}
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'lit:api:assessment-reference-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' text="Reference Export" help_text="All references and tags." allow_unpublished=False %}
-          {% if obj_perms.edit and assessment.literature_settings.conflict_resolution %}
-            {% url 'lit:api:assessment-user-tag-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' text='User Tag Export' help_text="All references and tags, including user tags. Team members only." allow_unpublished=False %}
-          {% endif %}
-        </div>
-      {% endif %}
-    </div>
 
-    <div {% if not assessment.has_rob_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">{{assessment.get_rob_name_display|title}}</h6>
-      {% if not assessment.has_rob_data %}
-        {% alert warning %} No data available {% endalert %}
+    {% if assessment.has_lit_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">Literature Review</h6>
+      <div class="list-group my-2">
+        {% url 'lit:api:assessment-reference-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' text="Reference Export" help_text="All references and tags." allow_unpublished=False %}
+        {% if obj_perms.edit and assessment.literature_settings.conflict_resolution %}
+          {% url 'lit:api:assessment-user-tag-export' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' text='User Tag Export' help_text="All references and tags, including user tags. Team members only." allow_unpublished=False %}
+        {% endif %}
+      </div>
+    {% endif %}
 
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'riskofbias:api:assessment-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' text=assessment.get_rob_name_display|title|add:' Export' help_text="All final reviews." %}
+    {% if assessment.has_rob_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">{{assessment.get_rob_name_display|title}}</h6>
+      <div class="list-group my-2">
+        {% url 'riskofbias:api:assessment-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' text=assessment.get_rob_name_display|title|add:' Export' help_text="All final reviews." %}
+        {% if obj_perms.edit %}
+          {% url 'riskofbias:api:assessment-full-export' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' text='Full '|add:assessment.get_rob_name_display|title|add:' Export' help_text="All reviews, including individual reviews. Team members only." %}
+        {% endif %}
+      </div>
+    {% endif %}
 
-          {% if obj_perms.edit %}
-            {% url 'riskofbias:api:assessment-full-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' text='Full '|add:assessment.get_rob_name_display|title|add:' Export' help_text="All reviews, including individual reviews. Team members only." %}
-          {% endif %}
-        </div>
-      {% endif %}
-    </div>
+    {% if assessment.has_animal_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">Animal Bioassay</h6>
+      <div class="list-group my-2">
+        {% url 'animal:api:assessment-full-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-data' text='Complete Export' help_text="Complete animal bioassay data export, where each row is a endpoint-group for all data extracted." %}
+        {% url 'animal:api:assessment-endpoint-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-summary' text='Endpoint Summary' help_text="Endpoint summary animal bioassay data, where each row is an extracted endpoint." %}
+      </div>
+    {% endif %}
 
-    <div {% if not assessment.has_animal_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">Animal Bioassay</h6>
-      {% if not assessment.has_animal_data %}
-        {% alert warning %} No data available {% endalert %}
+    {% if assessment.has_epi_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">Epidemiology</h6>
+      <div class="list-group my-2">
+        {% if assessment.epi_version == EpiVersion.V1 %}
+          {% url 'epi:api:assessment-export' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
+          {% url 'epi:api:assessment-study-heatmap' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
+        {% else %}
+          {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
+          {% url 'epiv2:api:assessment-study-export' assessment.pk as the_url %}
+          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
+        {% endif %}
+      </div>
+    {% endif %}
 
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'animal:api:assessment-full-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-data' text='Complete Export' help_text="Complete animal bioassay data export, where each row is a endpoint-group for all data extracted." %}
+    {% if assessment.has_epi_meta_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">Epidemiology Meta-Analysis</h6>
+      <div class="list-group my-2">
+        {% url 'meta:api:assessment-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epimeta-data' text='Complete Export' help_text="All epidemiology meta-analysis data." %}
+      </div>
+    {% endif %}
 
-          {% url 'animal:api:assessment-endpoint-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-summary' text='Endpoint Summary' help_text="Endpoint summary animal bioassay data, where each row is an extracted endpoint." %}
-        </div>
-      {% endif %}
-    </div>
+    {% if assessment.has_invitro_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">In-vitro</h6>
+      <div class="list-group my-2">
+        {% url 'invitro:api:assessment-full-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='invitro-data' text='Complete Export' help_text="All in-vitro data." %}
+      </div>
+    {% endif %}
 
-    <div {% if not assessment.has_epi_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">Epidemiology</h6>
-      {% if not assessment.has_epi_data %}
-        {% alert warning %} No data available {% endalert %}
+    {% if assessment.has_ecology_data %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">Ecology</h6>
+      <div class="list-group my-2">
+        {% url 'eco:api:assessment-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' text='Complete Export' help_text="All ecological data." %}
+        {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' text='Study Summary' help_text="Ecology study summary data." %}
+      </div>
+    {% endif %}
 
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% if assessment.epi_version == EpiVersion.V1 %}
-            {% url 'epi:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
-            {% url 'epi:api:assessment-study-heatmap' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
-          {% else %}
-            {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
-            {% url 'epiv2:api:assessment-study-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
-          {% endif %}
-        </div>
-      {% endif %}
-    </div>
-
-
-    <div {% if not assessment.has_epi_meta_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">Epidemiology Meta-Analysis</h6>
-      {% if not assessment.has_epi_meta_data %}
-        {% alert warning %} No data available {% endalert %}
-
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'meta:api:assessment-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epimeta-data' text='Complete Export' help_text="All epidemiology meta-analysis data." %}
-        </div>
-      {% endif %}
-    </div>
-
-
-    <div {% if not assessment.has_invitro_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">In-vitro</h6>
-      {% if not assessment.has_invitro_data %}
-        {% alert warning %} No data available {% endalert %}
-
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'invitro:api:assessment-full-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='invitro-data' text='Complete Export' help_text="All in-vitro data." %}
-        </div>
-      {% endif %}
-    </div>
-
-
-    <div {% if not assessment.has_ecology_data %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">Ecology</h6>
-      {% if not assessment.has_ecology_data %}
-        {% alert warning %} No data available {% endalert %}
-
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'eco:api:assessment-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' text='Complete Export' help_text="All ecological data." %}
-          {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' text='Study Summary' help_text="Ecology study summary data." %}
-        </div>
-      {% endif %}
-    </div>
-
-
-    <div {% if not assessment.udf_bindings.exists and not assessment.udf_tag_bindings.exists %} class="order-12" {% endif %}>
-      <h6 class="mb-2 font-size-regular font-weight-bold">User Defined Fields (UDF) Data</h6>
-      {% if not assessment.udf_bindings.exists and not assessment.udf_tag_bindings.exists %}
-        {% alert warning %} No data available {% endalert %}
-      {% else %}
-        <div class="list-group mb-3 mt-2">
-          {% url 'udf:api:assessment-export-model-udfs' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with allow_unpublished=False link=the_url format="xlsx" name='udf-model-content' text='UDF Model Content' help_text="All data collected from UDFs bound to studies and endpoints. May include unpublished studies." %}
-          {% url 'udf:api:assessment-export-tag-udfs' assessment.pk as the_url %}
-          {% include "assessment/fragments/downloads_select.html" with allow_unpublished=False link=the_url format="xlsx" name='udf-tag-content' text='UDF Tag Content' help_text="All data collected from UDFs bound to literature tags. May include unpublished studies." %}
-        </div>
-      {% endif %}
-    </div>
+    {% if assessment.udf_bindings.exists or assessment.udf_tag_bindings.exists %}
+      <h6 class="mb-1 font-size-regular font-weight-bold">User Defined Fields (UDF) Data</h6>
+      <div class="list-group my-2">
+        {% url 'udf:api:assessment-export-model-udfs' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with allow_unpublished=False link=the_url format="xlsx" name='udf-model-content' text='UDF Model Content' help_text="All data collected from UDFs bound to studies and endpoints. May include unpublished studies." %}
+        {% url 'udf:api:assessment-export-tag-udfs' assessment.pk as the_url %}
+        {% include "assessment/fragments/downloads_select.html" with allow_unpublished=False link=the_url format="xlsx" name='udf-tag-content' text='UDF Tag Content' help_text="All data collected from UDFs bound to literature tags. May include unpublished studies." %}
+      </div>
+    {% endif %}
   </div>
 {% endblock %}
 
