--- a/hawc/apps/assessment/templates/assessment/components/label_modal.html
+++ b/hawc/apps/assessment/templates/assessment/components/label_modal.html
@@ -2,7 +2,7 @@
 
 {% block modal_content_wrapper %}
   <form method="post" class="w-50">
-    <div id="tag-modal-content" class="modal-content">
+    <div id="label-modal-content" class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">
           Apply labels
