--- a/hawc/apps/summary/templates/summary/visual_detail.html
+++ b/hawc/apps/summary/templates/summary/visual_detail.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <div class='visualization'></div>
-  {% include "assessment/components/tag_modal.html" with modal_id="tag-modal"%}
+  {% include "assessment/components/label_modal.html" with modal_id="label-modal"%}
 {% endblock %}
 
 {% block extrajs %}
