--- a/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
@@ -5,7 +5,7 @@
     hx-swap-oob="outerHTML"
   >
     {% for label in labels %}
-      <div class="label mx-1 mb-3" style="background-color: {{label.color}}; color: {{label.text_color}};" title="{{label.description}}">{{label.name}}</div>
+      <a class="label mx-1 mb-3" href="{{label.get_labeled_items_url}}" style="background-color: {{label.color}}; color: {{label.text_color}};" title="{{label.description}}">{{label.name}}</a>
     {% endfor %}
   </div>
 {% else %}
