--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -26,15 +26,17 @@
           <td>
             <div class="d-flex align-items-center">
               <a class="text-nowrap" href="{{visual.get_absolute_url}}">{{visual.title}}</a>
-              {% for labeled_item in visual.visible_labels %}
-                <a class="tny mx-1 label" href="{{labeled_item.label.get_labeled_items_url}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
-              {% endfor %}
-              {% for labeled_item in visual.datapivotquery.visible_query_labels %}
-                <a class="tny mx-1 label" href="{{labeled_item.label.get_labeled_items_url}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
-              {% endfor %}
-              {% for labeled_item in visual.datapivotupload.visible_upload_labels %}
-                <a class="tny mx-1 label" href="{{labeled_item.label.get_labeled_items_url}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
-              {% endfor %}
+              <div class="d-flex flex-wrap">
+                {% for labeled_item in visual.visible_labels %}
+                  <a class="tny m-1 label text-nowrap" href="{% url 'assessment:labeled-items' assessment.pk %}?label={{labeled_item.label.pk}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
+                {% endfor %}
+                {% for labeled_item in visual.datapivotquery.visible_query_labels %}
+                  <a class="tny m-1 label text-nowrap" href="{% url 'assessment:labeled-items' assessment.pk %}?label={{labeled_item.label.pk}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
+                {% endfor %}
+                {% for labeled_item in visual.datapivotupload.visible_upload_labels %}
+                  <a class="tny m-1 label text-nowrap" href="{% url 'assessment:labeled-items' assessment.pk %}?label={{labeled_item.label.pk}}" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</a>
+                {% endfor %}
+              </div>
               {% if not visual.published %}
                 <i class="fa fa-eye-slash mx-1" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
               {% endif %}
