--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -67,7 +67,22 @@ input[type="submit"].btn, section button.btn, section input[type="button"].btn, 
         100% 52%,
         calc(100% - 12px) 100%,
         0% 100%
-    )
+    );
+    -webkit-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+.label:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.clickable:hover:has(.label:hover) {
+    background-color: unset !important;
+}
+.clickable:hover:has(.label:hover) .bg-light {
+    background-color: #f8f9fa !important;
 }
 
 .unpublishedBadge+.actionsMenu, .unpublishedBadge+button.close {
@@ -753,13 +768,20 @@ a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
     padding: 0.2rem 0.75rem;
 }
 
-div.input-group span.autocompletetextwidget {
-    height: 37.5px;
+div.input-group span.autocompletetextwidget, div.input-group span.autocompleteselectmultiplewidget {
+    height: 38px;
     line-height: 1.7;
+    border-radius: 0px;
+    min-width: 250px;
 }
 
-div.input-group-append select {
+div.input-group-append select, div.input-group-append span.select2 {
     height: 100%;
+}
+
+div.input-group-append input.select2-search__field {
+    font-size: 1rem;
+    height: 38px !important;
 }
 
 /* BMD APPLICATION STYLES */
